--- a/NFA/NFA/NFA/Views/MainPage.xaml
+++ b/NFA/NFA/NFA/Views/MainPage.xaml
@@ -10,37 +10,40 @@
     <TabbedPage.Children>
 
         <NavigationPage Title="Dashboard">
+            <x:Arguments>
+                <views:AppDashboardPage />
+            </x:Arguments>
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
                     <On Platform="iOS" Value="tab_dash.png"/>
                 </OnPlatform>
             </NavigationPage.Icon>
-            <x:Arguments>
-                <views:AppDashboardPage />
-            </x:Arguments>
+            
         </NavigationPage>
 
         <NavigationPage Title="Browse">
+            <x:Arguments>
+                <views:ItemsPage />
+            </x:Arguments>
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
                     <On Platform="iOS" Value="tab_feed.png"/>
                 </OnPlatform>
             </NavigationPage.Icon>
-            <x:Arguments>
-                <views:ItemsPage />
-            </x:Arguments>
+            
         </NavigationPage>
 
-        <!--<NavigationPage Title="About">
+        <NavigationPage Title="Profile">
+            <x:Arguments>
+                <views:AppProfilePage />
+            </x:Arguments>
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_about.png"/>
+                    <On Platform="iOS" Value="tab_profile.png"/>
                 </OnPlatform>
             </NavigationPage.Icon>
-            <x:Arguments>
-                <views:AboutPage />
-            </x:Arguments>
-        </NavigationPage>-->
+            
+        </NavigationPage>
 
     </TabbedPage.Children>
 </TabbedPage>
